Fix line widths on mobile when line numbers are turned on

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -651,12 +651,12 @@ body {
   margin-top: var(--p-spacing); }
 
 /* Gutters */
-body:not(.is-mobile) :not(.canvas-node) .markdown-source-view.mod-cm6 .cm-gutters {
+body :not(.canvas-node) .markdown-source-view.mod-cm6 .cm-gutters {
   position: absolute !important;
   z-index: 0;
   margin-inline-end: 0; }
 
-body:not(.is-mobile) :not(.canvas-node) .markdown-source-view.mod-cm6.is-rtl .cm-gutters {
+body :not(.canvas-node) .markdown-source-view.mod-cm6.is-rtl .cm-gutters {
   right: 0; }
 
 body {
@@ -1558,6 +1558,9 @@ body {
 /* File margins ------------------------------------ */
 .is-readable-line-width {
   --file-margins: 0; }
+
+.is-mobile .markdown-preview-view {
+  --folding-offset: 0; }
 
 /* With line numbers */
 .minimal-line-nums .workspace-leaf-content[data-type=markdown] {
