--- a/src/scss/app/editor.scss
+++ b/src/scss/app/editor.scss
@@ -33,13 +33,13 @@
 }
 
 /* Gutters */
-body:not(.is-mobile) :not(.canvas-node) .markdown-source-view.mod-cm6 .cm-gutters {
+body :not(.canvas-node) .markdown-source-view.mod-cm6 .cm-gutters {
 	position:absolute !important;
 	z-index:0;
 	margin-inline-end: 0;
 
 }
-body:not(.is-mobile) :not(.canvas-node) .markdown-source-view.mod-cm6.is-rtl .cm-gutters {
+body :not(.canvas-node) .markdown-source-view.mod-cm6.is-rtl .cm-gutters {
 	right: 0;
 }
 
